harbor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-ingress
  namespace: harbor
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - harbor.unbe1iev.com
    secretName: harbor-tls
  rules:
  - host: harbor.unbe1iev.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: harbor-portal
            port:
              number: 80
      - path: /api/
        pathType: ImplementationSpecific
        backend:
          service:
            name: harbor-core
            port:
              number: 80
      - path: /service/
        pathType: ImplementationSpecific
        backend:
          service:
            name: harbor-core
            port:
              number: 80
      - path: /v2/
        pathType: ImplementationSpecific
        backend:
          service:
            name: harbor-registry
            port:
              number: 5000
      - path: /chartrepo/
        pathType: ImplementationSpecific
        backend:
          service:
            name: harbor-core
            port:
              number: 80
      - path: /c/
        pathType: ImplementationSpecific
        backend:
          service:
            name: harbor-core
            port:
              number: 80
      - path: /v2.0/
        pathType: ImplementationSpecific
        backend:
          service:
            name: harbor-core
            port:
              number: 80
      - path: /api/v2.0/
        pathType: ImplementationSpecific
        backend:
          service:
            name: harbor-core
            port:
              number: 80
      - path: /jobs/
        pathType: ImplementationSpecific
        backend:
          service:
            name: harbor-jobservice
            port:
              number: 80
